--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3074,7 +3074,7 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   z-index: 400;
   display: grid;
