--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -377,7 +377,7 @@ a {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  margin-top: 2.5vw;
+  margin-top: 5vh;
   gap: 1vw;
 }
 
@@ -2050,7 +2050,7 @@ a {
   background-color: black;
   z-index: 40;
   padding: 10vh 5%;
-  padding-top: 15vh;
+  padding-top: 10vh;
 }
 
 .projects-section-content {
@@ -2058,7 +2058,7 @@ a {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 10vh;
+  gap: 5vh;
   background-color: black;
 }
 
