--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3613,11 +3613,11 @@ input {
 }
 
 .why-us-text-description {
-  font-size: 1rem;
+  font-size: 2.75vw;
 }
 
 .why-us-right-row:hover p {
-  font-size: 1rem;
+  font-size: 2.75vw;
 }
 /* SECTION FIVE */
 
